fix cluebox spacing extra remove grid from app div styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@ html, body {
 }
 
 #app {
-  display:grid;
   font-family: Avenir, Helvetica, Arial, sans-serif;
   text-align: center;
   color: #2c3e50;
